Actions Test 2.5: Edited Destroy Workflow

--- a/.github/workflows/destroy.yaml
+++ b/.github/workflows/destroy.yaml
@@ -48,7 +48,7 @@ jobs:
         ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
         ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
       run: terraform init
-      working-directory: ./capstone_terraform
+      working-directory: ./terraform
 
     # Destory Infrastructure
     - name: Terraform Destroy
@@ -58,4 +58,4 @@ jobs:
         ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
         ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
       run: terraform destroy --auto-approve
-      working-directory: ./capstone_terraform
+      working-directory: ./terraform
