--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -74,7 +74,7 @@ jobs:
         chmod +x pre-apply.sh
         chmod +x authorized_ips.sh
         ./pre-apply.sh
-        ./authorized_ips.sh
+        ./runner_ip.sh
       working-directory: ./terraform
 
     # Initialize Terraform
