Domain Configuration Check 3

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -3,7 +3,7 @@ name: Deploy Infrastructure and Configure AKS
 on:
   push:
     branches: # This workflow will only run on pushes to the main branch
-      - ma
+      - main
 
 # on:
 #   workflow_dispatch: # This allows manual triggering of the workflow from the GitHub Actions tab
