--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -4,6 +4,7 @@ on:
   push:
     branches: # This workflow will only run on pushes to the main branch
       - main
+  workflow_dispatch: # This allows manual triggering of the workflow from the GitHub Actions tab
 
 # on:
 #   workflow_dispatch: # This allows manual triggering of the workflow from the GitHub Actions tab
