--- a/.github/workflows/destroy.yaml
+++ b/.github/workflows/destroy.yaml
@@ -32,13 +32,16 @@ jobs:
         terraform_version: 1.11.2
 
     # Cache Terraform plugins to speed up future runs
-    - name: Cache Terraform plugins
-      uses: actions/cache@v3
+    - name: Cache Terraform Plugins and Modules
+      uses: actions/cache@v4
       with:
-        path: ~/.terraform.d/plugin-cache
-        key: ${{ runner.os }}-terraform-${{ hashFiles('**/.terraform.lock.hcl') }}
+        path: |
+          ~/.terraform.d/plugins
+          .terraform/providers
+        key: |
+          terraform-${{ runner.os }}-${{ hashFiles('**/.terraform.lock.hcl') }}
         restore-keys: |
-          ${{ runner.os }}-terraform-
+          terraform-${{ runner.os }}-
 
     # Initialize Terraform configuration
     - name: Terraform Init
