Naming Convention and RG Permission Test 6

--- a/.github/workflows/destroy.yaml
+++ b/.github/workflows/destroy.yaml
@@ -31,17 +31,17 @@ jobs:
       with:
         terraform_version: 1.11.2
 
-    # Cache Terraform plugins to speed up future runs
-    - name: Cache Terraform Plugins and Modules
-      uses: actions/cache@v4
-      with:
-        path: |
-          ~/.terraform.d/plugins
-          .terraform/providers
-        key: |
-          terraform-${{ runner.os }}-${{ hashFiles('**/.terraform.lock.hcl') }}
-        restore-keys: |
-          terraform-${{ runner.os }}-
+    # # Cache Terraform plugins to speed up future runs
+    # - name: Cache Terraform Plugins and Modules
+    #   uses: actions/cache@v4
+    #   with:
+    #     path: |
+    #       ~/.terraform.d/plugins
+    #       .terraform/providers
+    #     key: |
+    #       terraform-${{ runner.os }}-${{ hashFiles('**/.terraform.lock.hcl') }}
+    #     restore-keys: |
+    #       terraform-${{ runner.os }}-
 
     # Initialize Terraform configuration
     - name: Terraform Init
