--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -90,19 +90,11 @@ jobs:
     - name: Install Kubelogin
       run: sudo az aks install-cli
 
-    - name: Set environment variables
-      run: |
-        CLUSTER_NAME=$(terraform output -raw aks_cluster_name 2>/dev/null | tr -d '\n' | tr -d '\r')
-        RESOURCE_GROUP=$(terraform output -raw aks_resource_group 2>/dev/null | tr -d '\n' | tr -d '\r')
-        
-        echo "CLUSTER_NAME=${CLUSTER_NAME}" >> $GITHUB_ENV
-        echo "RESOURCE_GROUP=${RESOURCE_GROUP}" >> $GITHUB_ENV
-      working-directory: ./terraform
-
-
     # Get AKS Credentials for domain.sh script
     - name: Get AKS Credentials
       run: |
+        RESOURCE_GROUP=$(terraform output -raw aks_resource_group)
+        CLUSTER_NAME=$(terraform output -raw aks_cluster_name)
         az aks get-credentials --resource-group $RESOURCE_GROUP --name $CLUSTER_NAME
       working-directory: ./terraform
     
