--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -92,8 +92,8 @@ jobs:
 
     - name: Set environment variables
       run: |
-        echo "CLUSTER_NAME=$(terraform output -raw aks_cluster_name | tr -d '\n' | tr -d '\r')" >> $GITHUB_ENV
-        echo "RESOURCE_GROUP=$(terraform output -raw aks_resource_group | tr -d '\n' | tr -d '\r')" >> $GITHUB_ENV
+        echo "CLUSTER_NAME=$(terraform output -json | jq -r '.aks_cluster_name.value')" >> $GITHUB_ENV
+        echo "RESOURCE_GROUP=$(terraform output -json | jq -r '.aks_resource_group.value')" >> $GITHUB_ENV
       working-directory: ./terraform
 
     # Get AKS Credentials for domain.sh script
