--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -37,7 +37,7 @@ jobs:
     - name: Setup Terraform
       uses: hashicorp/setup-terraform@v2
       with:
-        terraform_version: 1.11.2
+        terraform_version: 1.11.3
 
     # Run bash scripts to prepare the backend for Terraform and authorize GitHub Actions runner IP to access the AKS cluster
     - name: Run inline bash script
@@ -99,6 +99,8 @@ jobs:
     # Get AKS Credentials for domain.sh script
     - name: Get AKS Credentials
       run: |
+        RESOURCE_GROUP=$(terraform output -json | jq -r '.aks_resource_group.value')
+        CLUSTER_NAME=$(terraform output -json | jq -r '.aks_cluster_name.value')
         az aks get-credentials --resource-group $RESOURCE_GROUP --name $CLUSTER_NAME
       working-directory: ./terraform
     
