--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -90,11 +90,11 @@ jobs:
     - name: Install Kubelogin
       run: sudo az aks install-cli
 
-    - name: Set environment variables
-      run: |
-        echo "CLUSTER_NAME=$(terraform output -json | jq -r '.aks_cluster_name.value')" >> $GITHUB_ENV
-        echo "RESOURCE_GROUP=$(terraform output -json | jq -r '.aks_resource_group.value')" >> $GITHUB_ENV
-      working-directory: ./terraform
+    # - name: Set environment variables
+    #   run: |
+    #     echo "CLUSTER_NAME=$(terraform output -json | jq -r '.aks_cluster_name.value')" >> $GITHUB_ENV
+    #     echo "RESOURCE_GROUP=$(terraform output -json | jq -r '.aks_resource_group.value')" >> $GITHUB_ENV
+    #   working-directory: ./terraform
 
     # Get AKS Credentials for domain.sh script
     - name: Get AKS Credentials
