--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -99,8 +99,8 @@ jobs:
     # Get AKS Credentials for domain.sh script
     - name: Get AKS Credentials
       run: |
-        RESOURCE_GROUP=$(terraform output -json | jq -r '.aks_resource_group.value')
-        CLUSTER_NAME=$(terraform output -json | jq -r '.aks_cluster_name.value')
+        RESOURCE_GROUP=`terraform output -json | jq -r '.aks_resource_group.value'`
+        CLUSTER_NAME=`terraform output -json | jq -r '.aks_cluster_name.value'`
         az aks get-credentials --resource-group $RESOURCE_GROUP --name $CLUSTER_NAME
       working-directory: ./terraform
     
