--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -37,7 +37,7 @@ jobs:
     - name: Setup Terraform
       uses: hashicorp/setup-terraform@v2
       with:
-        terraform_version: 1.11.3
+        terraform_version: 1.11.2
 
     # Run bash scripts to prepare the backend for Terraform and authorize GitHub Actions runner IP to access the AKS cluster
     - name: Run inline bash script
@@ -90,25 +90,17 @@ jobs:
     - name: Install Kubelogin
       run: sudo az aks install-cli
 
-    # - name: Set environment variables
-    #   run: |
-    #     echo "CLUSTER_NAME=$(terraform output -json | jq -r '.aks_cluster_name.value')" >> $GITHUB_ENV
-    #     echo "RESOURCE_GROUP=$(terraform output -json | jq -r '.aks_resource_group.value')" >> $GITHUB_ENV
-    #   working-directory: ./terraform
-
     # Get AKS Credentials for domain.sh script
     - name: Get AKS Credentials
       run: |
-        RESOURCE_GROUP=`terraform output -json | jq -r '.aks_resource_group.value'`
-        CLUSTER_NAME=`terraform output -json | jq -r '.aks_cluster_name.value'`
-        az aks get-credentials --resource-group $RESOURCE_GROUP --name $CLUSTER_NAME
+        chmod +x aks_cred.sh
+        ./aks_cred.sh
       working-directory: ./terraform
     
     # Authenticate with Kubelogin
     - name: Authenticate with Kubelogin
       run: |
         kubelogin convert-kubeconfig -l azurecli
-      working-directory: ./terraform
 
     # Run bash script to configure the domain
     - name: Run inline bash script
