--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -116,15 +116,15 @@ jobs:
       run: terraform init
       working-directory: ./terraform
 
-    # Apply Terraform configuration
-    - name: Terraform Apply
-      env:
-        ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
-        ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
-        ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
-        ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
-      run: terraform apply --auto-approve
-      working-directory: ./terraform
+    # # Apply Terraform configuration
+    # - name: Terraform Apply
+    #   env:
+    #     ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
+    #     ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
+    #     ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
+    #     ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
+    #   run: terraform apply --auto-approve
+    #   working-directory: ./terraform
 
     # Setup kubectl for domain.sh script
     - name: Setup kubectl
@@ -156,13 +156,13 @@ jobs:
         TOKEN: ${{ secrets.DOMAIN_API_TOKEN }}
         DOMAIN: ${{ secrets.DOMAIN }}
       run: |
-        terraform output -json name_servers
+        NAMESERVERS=$(terraform output -json name_servers)
+
+        AZURE_NS1=$(echo "$NAMESERVERS" | grep -oP '"\K[^"]+(?=")' | head -n 1 | sed 's/,//; s/\.$//')
+        AZURE_NS2=$( echo "$NAMESERVERS" | grep -oP '"\K[^"]+(?=")' | head -n 3 | tail -n 1 | sed 's/,//; s/\.$//')
+        AZURE_NS3=$(echo "$NAMESERVERS" | grep -oP '"\K[^"]+(?=")' | head -n 5 | tail -n 1 | sed 's/,//; s/\.$//')
+        AZURE_NS4=$(echo "$NAMESERVERS" | grep -oP '"\K[^"]+(?=")' | head -n 7 | tail -n 1 | sed 's/,//; s/\.$//')
+
+        chmod +x domain.sh
+        ./domain.sh
       working-directory: ./terraform
-
-        # AZURE_NS1=$(echo "$NAMESERVERS" | grep -v 'terraform-bin' | grep -v 'Terraform exited with code' | grep -oP '"\K[^"]+(?=")' | head -n 1 | sed 's/,//; s/\.$//' | grep -v '^0$')
-        # AZURE_NS2=$(echo "$NAMESERVERS" | grep -v 'terraform-bin' | grep -v 'Terraform exited with code' | grep -oP '"\K[^"]+(?=")' | head -n 2 | tail -n 1 | sed 's/,//; s/\.$//' | grep -v '^0$')
-        # AZURE_NS3=$(echo "$NAMESERVERS" | grep -v 'terraform-bin' | grep -v 'Terraform exited with code' | grep -oP '"\K[^"]+(?=")' | head -n 3 | tail -n 1 | sed 's/,//; s/\.$//' | grep -v '^0$')
-        # AZURE_NS4=$(echo "$NAMESERVERS" | grep -v 'terraform-bin' | grep -v 'Terraform exited with code' | grep -oP '"\K[^"]+(?=")' | head -n 4 | tail -n 1 | sed 's/,//; s/\.$//' | grep -v '^0$')
-
-        # chmod +x domain.sh
-        # ./domain.sh
