--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -74,7 +74,7 @@ jobs:
 
   deploy:
     runs-on: ubuntu-latest
-    # needs: create-infrastructure
+    needs: create-infrastructure
 
     steps:
       # Login to Azure CLI using the Azure login action
@@ -100,11 +100,12 @@ jobs:
       with:
         terraform_version: 1.11.3
 
-    # Move deployment scripts to the correct directory
-    - name: Move deployment scripts
+    # Run bash scripts to prepare the backend for Terraform and authorize GitHub Actions runner IP to access the AKS cluster
+    - name: Create Terraform Backend
       run: |
-        mv * ..
-      working-directory: ./terraform/api_deployments
+        chmod +x pre-apply.sh
+        ./pre-apply.sh
+      working-directory: ./terraform
 
     # Initialize Terraform
     - name: Terraform Init
@@ -113,7 +114,7 @@ jobs:
         ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
         ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
         ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
-      run: terraform init
+      run: terraform init && terraform validate
       working-directory: ./terraform
 
     # Apply Terraform configuration
@@ -164,7 +165,7 @@ jobs:
         echo $AZURE_NS2
         export AZURE_NS3=$(echo "$NAMESERVERS" | grep -oP '"\K[^"]+(?=")' | head -n 5 | tail -n 1 | sed 's/,//; s/\.$//')
         echo $AZURE_NS3
-        export AZURE_NS4=$(echo "$NAMESERVERS" | grep -oP '"\K[^"]+(?=")' | head  7 | tail -n 1 | sed 's/,//; s/\.$//')
+        export AZURE_NS4=$(echo "$NAMESERVERS" | grep -oP '"\K[^"]+(?=")' | head -n 7 | tail -n 1 | sed 's/,//; s/\.$//')
         echo $AZURE_NS4
 
         chmod +x domain.sh
