Single Job: Cert-Manger Test 1

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -74,7 +74,7 @@ jobs:
 
   deploy:
     runs-on: ubuntu-latest
-    needs: create-infrastructure
+    # needs: create-infrastructure
 
     steps:
       # Login to Azure CLI using the Azure login action
