--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -16,22 +16,68 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # Login to Azure CLI using the Azure login action
-    - uses: azure/login@v2
+    # Set up Docker Buildx
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
+
+    # Login to Azure CLI using the Azure login action
+    - name: Login to Azure
+      uses: azure/login@v2
       with:
         creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-    # This step checks that the Azure account is logged in
+    # Setup kubectl for domain.sh script
+    - name: Setup kubectl
+      uses: azure/setup-kubectl@v3
+      with:
+        version: 'v1.30.3'
+
+    # Install Kubelogin for domain.sh script
+    - name: Install Kubelogin
+      run: sudo az aks install-cli
+
+    # Checkout the repository
+    - name: Checkout repository
+      uses: actions/checkout@v2
+
+    # Login to DockerHub (optional, if pushing)
+    - name: Login to DockerHub
+      uses: docker/login-action@v3
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+
+    # Build time-api Docker image
+    - name: Build Docker image
+      run: |
+        docker build -t time-api:${{ github.sha }} -t time-api:latest .
+
+    - name: Run container
+      run: |
+        docker run -d -p 5000:5000 --name time-api time-api:${{ github.sha }}
+
+    - name: Wait for container to start
+      run: |
+        sleep 5
+
+    - name: Test Flask app endpoint
+      run: |
+        curl --fail http://localhost:5000 || (docker logs time-api && exit 1)
+
+    - name: Push Docker image
+      run: |
+        docker tag time-api:${{ github.sha }} victorthegreat7/time-api:${{ github.sha }}
+        docker tag time-api:${{ github.sha }} victorthegreat7/time-api:latest
+        docker push victorthegreat7/time-api:${{ github.sha }}
+        docker push victorthegreat7/time-api:latest
+
+    # Check that the Azure account is logged in
     - name: Azure CLI script
       uses: azure/cli@v2
       with:
         azcliversion: latest
         inlineScript: |
           az account show
-
-    # Checkout the repository
-    - name: Checkout repository
-      uses: actions/checkout@v2
 
     # Setup Terraform
     - name: Setup Terraform
@@ -66,15 +112,31 @@ jobs:
       run: terraform apply --auto-approve
       working-directory: ./terraform
 
-    # Setup kubectl for domain.sh script
-    - name: Setup kubectl
-      uses: azure/setup-kubectl@v3
-      with:
-        version: 'v1.30.3'
+    # Move deployment script to the terraform directory
+    - name: Move deployment script
+      run: |
+        mv deploy.tf ..
+      working-directory: ./terraform/api_deployments
 
-    # Install Kubelogin for domain.sh script
-    - name: Install Kubelogin
-      run: sudo az aks install-cli
+    # Initialize Terraform
+    - name: Terraform Init
+      env:
+        ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
+        ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
+        ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
+        ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
+      run: terraform init && terraform validate
+      working-directory: ./terraform
+
+    # Apply Terraform configuration
+    - name: Terraform Apply
+      env:
+        ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
+        ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
+        ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
+        ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
+      run: terraform apply --auto-approve
+      working-directory: ./terraform
 
     # Get AKS Credentials for domain.sh script
     - name: Get AKS Credentials
@@ -110,3 +172,11 @@ jobs:
         chmod +x domain.sh
         ./domain.sh
       working-directory: ./terraform
+    
+    - name: Wait for container to start
+      run: |
+        sleep 1800
+
+    - name: Check if API endpoint (api.mywonder.works/time) works
+      run: |
+        curl https://api.mywonder.works/time
