--- a/.github/workflows/destroy.yaml
+++ b/.github/workflows/destroy.yaml
@@ -53,6 +53,10 @@ jobs:
 
     # Clean up A record
     - name: Clean up A record
+      env:
+        USERNAME: ${{ secrets.DOMAIN_API_USERNAME }}
+        TOKEN: ${{ secrets.DOMAIN_API_TOKEN }}
+        DOMAIN: ${{ secrets.DOMAIN }}
       run: |
         chmod +x cleanup.sh
         ./cleanup.sh
