First Attempt Certificate Issuance Check 2

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -2,9 +2,9 @@ name: Deploy Infrastructure and Configure AKS
 
 # This workflow will run on pushes to the main branch and manual triggers
 on:
-  # push:
-  #   branches:
-  #     - main
+  push:
+    branches:
+      - main
   workflow_dispatch:
 
 permissions:
@@ -171,7 +171,7 @@ jobs:
 
         chmod +x domain.sh
         ./domain.sh
-      working-directory: ./terraform/bash_scripts
+      working-directory: ./terraform/
     
     - name: Wait for container to start
       run: |
