--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -16,9 +16,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    # Set up Docker Buildx
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v3
+    # # Set up Docker Buildx
+    # - name: Set up Docker Buildx
+    #   uses: docker/setup-buildx-action@v3
 
     # Login to Azure CLI using the Azure login action
     - name: Login to Azure
@@ -40,36 +40,36 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v2
 
-    # Login to DockerHub (optional, if pushing)
-    - name: Login to DockerHub
-      uses: docker/login-action@v3
-      with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
+    # # Login to DockerHub (optional, if pushing)
+    # - name: Login to DockerHub
+    #   uses: docker/login-action@v3
+    #   with:
+    #     username: ${{ secrets.DOCKER_USERNAME }}
+    #     password: ${{ secrets.DOCKER_PASSWORD }}
 
-    # Build time-api Docker image
-    - name: Build Docker image
-      run: |
-        docker build -t time-api:${{ github.sha }} -t time-api:latest .
+    # # Build time-api Docker image
+    # - name: Build Docker image
+    #   run: |
+    #     docker build -t time-api:${{ github.sha }} -t time-api:latest .
 
-    - name: Run container
-      run: |
-        docker run -d -p 5000:5000 --name time-api time-api:${{ github.sha }}
+    # - name: Run container
+    #   run: |
+    #     docker run -d -p 5000:5000 --name time-api time-api:${{ github.sha }}
 
-    - name: Wait for container to start
-      run: |
-        sleep 5
+    # - name: Wait for container to start
+    #   run: |
+    #     sleep 5
 
-    - name: Test Flask app endpoint
-      run: |
-        curl --fail http://localhost:5000/time || (docker logs time-api && exit 1)
+    # - name: Test Flask app endpoint
+    #   run: |
+    #     curl --fail http://localhost:5000/time || (docker logs time-api && exit 1)
 
-    - name: Push Docker image
-      run: |
-        docker tag time-api:${{ github.sha }} victorthegreat7/time-api:${{ github.sha }}
-        docker tag time-api:${{ github.sha }} victorthegreat7/time-api:latest
-        docker push victorthegreat7/time-api:${{ github.sha }}
-        docker push victorthegreat7/time-api:latest
+    # - name: Push Docker image
+    #   run: |
+    #     docker tag time-api:${{ github.sha }} victorthegreat7/time-api:${{ github.sha }}
+    #     docker tag time-api:${{ github.sha }} victorthegreat7/time-api:latest
+    #     docker push victorthegreat7/time-api:${{ github.sha }}
+    #     docker push victorthegreat7/time-api:latest
 
     # Check that the Azure account is logged in
     - name: Azure CLI script
@@ -85,32 +85,32 @@ jobs:
       with:
         terraform_version: 1.11.3
 
-    # Run bash scripts to prepare the backend for Terraform and authorize GitHub Actions runner IP to access the AKS cluster
-    - name: Create Terraform Backend
-      run: |
-        chmod +x pre-apply.sh
-        ./pre-apply.sh
-      working-directory: ./terraform/bash_scripts
+    # # Run bash scripts to prepare the backend for Terraform and authorize GitHub Actions runner IP to access the AKS cluster
+    # - name: Create Terraform Backend
+    #   run: |
+    #     chmod +x pre-apply.sh
+    #     ./pre-apply.sh
+    #   working-directory: ./terraform/bash_scripts
 
-    # Initialize Terraform
-    - name: Terraform Init
-      env:
-        ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
-        ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
-        ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
-        ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
-      run: terraform init && terraform validate
-      working-directory: ./terraform
+    # # Initialize Terraform
+    # - name: Terraform Init
+    #   env:
+    #     ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
+    #     ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
+    #     ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
+    #     ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
+    #   run: terraform init && terraform validate
+    #   working-directory: ./terraform
 
-    # Apply Terraform configuration
-    - name: Terraform Apply
-      env:
-        ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
-        ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
-        ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
-        ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
-      run: terraform apply --auto-approve
-      working-directory: ./terraform
+    # # Apply Terraform configuration
+    # - name: Terraform Apply
+    #   env:
+    #     ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
+    #     ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
+    #     ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
+    #     ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
+    #   run: terraform apply --auto-approve
+    #   working-directory: ./terraform
 
     # Move deployment script to the terraform directory
     - name: Move deployment script
@@ -142,7 +142,12 @@ jobs:
     - name: Get AKS Credentials
       run: |
         RESOURCE_GROUP=$(terraform output -raw aks_resource_group | grep -v 'terraform-bin' | grep -v 'Terraform exited with code' | awk -F': ' '{print $2}' | grep -v '^0$')
+
+        echo $RESOURCE_GROUP
+
         CLUSTER_NAME=$(terraform output -raw aks_cluster_name | grep -v 'terraform-bin' | grep -v 'Terraform exited with code' | awk -F': ' '{print $2}' | grep -v '^0$')
+
+        echo $CLUSTER_NAME
 
         az aks get-credentials --resource-group $RESOURCE_GROUP --name $CLUSTER_NAME
     
