--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -141,15 +141,16 @@ jobs:
     # Get AKS Credentials for domain.sh script
     - name: Get AKS Credentials
       run: |
-        RESOURCE_GROUP=$(terraform output -raw aks_resource_group)
+        RESOURCE_GROUP=$(terraform output -raw aks_resource_group | grep -v 'terraform-bin' | grep -v 'Terraform exited with code' | awk -F': ' '{print $2}' | grep -v '^0$')
 
         echo $RESOURCE_GROUP
 
-        CLUSTER_NAME=$(terraform output -raw aks_cluster_name)
+        CLUSTER_NAME=$(terraform output -raw aks_cluster_name | grep -v 'terraform-bin' | grep -v 'Terraform exited with code' | awk -F': ' '{print $2}' | grep -v '^0$')
 
         echo $CLUSTER_NAME
 
         az aks get-credentials --resource-group $RESOURCE_GROUP --name $CLUSTER_NAME
+      working-directory: ./terraform
     
     # Authenticate with Kubelogin
     - name: Authenticate with Kubelogin
